design a little bit

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,6 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    background-color: #222222;
     color: white;
 }
 
@@ -32,4 +31,10 @@
 
 .btn {
     padding: 10px;
+}
+
+.header-text {
+    background-color: white;
+    padding: 10px;
+    text-align: center;
 }
